welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:9: error: expected class or object definition
def marquer() {
^MethodsPictureLarge:13: error: expected class or object definition
def faireV(c:Color) {
^MethodsPictureLarge:30: error: expected class or object definition
def fairemotif() {
^MethodsPictureLarge:44: error: Unmatched closing brace '}' ignored here
}
^